test/err_ptr_inter.go
// errorcheckdir

// Copyright 2015 The Go Authors. All rights reserved.
// Use of this source code is governed by a BSD-style
// license that can be found in the LICENSE file.

// Package gfpoly provides operations that treat big-nat quantities as if they were polynomials with coefficients {0,1}

package ignored
